--- a/index.html
+++ b/index.html
@@ -166,45 +166,8 @@
         <li><a href="./files/PySpark-and-Horovod.pdf"> <i class="fab fa fa-file-pdf-o"></i> Big Data Parallel Processing by PySpark and Horovod Distributed Deep Learning</a></li>
         <li><a href="https://github.com/SuperBruceJia/Sci-Hub-Paper-Download-shell"> <i class="fab fa-github"></i> Download Papers from Sci-Hub via Unix Shell</a></li>
         <li><a href="https://github.com/SuperBruceJia/Google-Scholar-Citations-Download"> <i class="fab fa-github"></i> Retrieve and Download Google Scholar Citation Papers</a></li>
-        <li><a href="https://github.com/SuperBruceJia/paper-reading/tree/master/shell-script/citations_PHP"> <i class="fab fa-github"></i> Homepage Shows Real-time Google Scholar Citations through PHP</a></li>
         <li><a href="https://github.com/SuperBruceJia/dynamic-web-crawlering-python"> <i class="fab fa-github"></i> Dynamic (Ajax) Web Crawler in Python</a></li>
         <li><a href="https://github.com/SuperBruceJia/pytorch-flask-deploy-webapp"> <i class="fab fa-github"></i> Deploy Machine Learning and Deep Learning Models with Flask and Docker as Web Applications</a></li>
-        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/ppt2pdf.md"> <i class="fab fa-github"></i> Convert PowerPoint (PPT) to PDF with Animations</a></li>
-        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/YouTube-DL.md"> <i class="fab fa-github"></i> Download YouTube Videos with Unlimited Speed via youtube-dl</a></li>
-        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/BigData.txt"> <i class="fab fa-github"></i> Compile Hadoop, Install Redis, Flink, Kafka, ZooKepper, and Spark on macOS</a></li>
-        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/Hadoop_HDFS.md"> <i class="fab fa-github"></i> Hadoop HDFS Data</a></li>
-        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/Hive_macOS.txt"> <i class="fab fa-github"></i> Hive Configuration on macOS</a></li>
-        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/spark_mac.md"> <i class="fab fa-github"></i> Spark Configuration on macOS</a></li>
-        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/hadoop-linux.txt"> <i class="fab fa-github"></i> Hadoop Configuration on Linux</a></li>
-        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/hive-linux.txt"> <i class="fab fa-github"></i> Hive Configuration on Linux</a></li>
-        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/storm-linux.txt"> <i class="fab fa-github"></i> Storm Configuration on Linux</a></li>
-        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/kaldi.txt"> <i class="fab fa-github"></i> Compiling Kaldi ASR on macOS</a></li>
-        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/SSH-SCP.txt"> <i class="fab fa-github"></i> Server SSH and SCP Scripts</a></li>
-        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/tmux.md"> <i class="fab fa-github"></i> Shell Tmux Usage</a></li>
-        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/Go-Script.txt"> <i class="fab fa-github"></i> Go Programming Scripts</a></li>
-        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/Julia.txt"> <i class="fab fa-github"></i> Julia Programming Scripts</a></li>
-        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/conda.txt"> <i class="fab fa-github"></i> Python Conda Scripts</a></li>
-        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/python_package_publishing_tutorial.ipynb"> <i class="fab fa-github"></i> Python PyPI Package Building Scripts</a></li>
-        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/npm.txt"> <i class="fab fa-github"></i> npm Scripts</a></li>
-        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/R.txt"> <i class="fab fa-github"></i> R Packages</a></li>
-        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/SQL.md"> <i class="fab fa-github"></i> SQL Programming Scripts</a></li>
-        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/csv_command.txt"> <i class="fab fa-github"></i> CSV Shell Scripts</a></li>
-        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/homebrew-use.txt"> <i class="fab fa-github"></i> macOS Homebrew Scripts</a></li>
-        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/ubuntu_latex.md"> <i class="fab fa-github"></i> Install LaTeX on Linux</a></li>
-        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/mac_LaTex_pkg.md"> <i class="fab fa-github"></i> LaTeX Package Installation on macOS and EPS to PDF</a></li>
-        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/LaTeX-IEEE-newcommand.md"> <i class="fab fa-github"></i> LaTeX Useful Newcommands</a></li>
-        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/LaTex-IEEE-Conference.md"> <i class="fab fa-github"></i> LaTeX IEEE Conference Useful Scripts</a></li>
-        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/LaTex-IEEE-Journal.md"> <i class="fab fa-github"></i> LaTeX IEEE Trans Useful Scripts</a></li>
-        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/matlab_GPU.md"> <i class="fab fa-github"></i> Matlab GPU Acceleration Tricks</a></li>
-        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/run_multiple_scripts.md"> <i class="fab fa-github"></i> Run Multiple Python Scripts via Shell sh</a></li>
-        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/PyTorch.txt"> <i class="fab fa-github"></i> Build PyTorch (CPU) from Source on macOS</a></li>
-        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/pytorch_cpu_control.md"> <i class="fab fa-github"></i> PyTorch Control the Usage of CPU Resources</a></li>
-        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/macos_tf.txt"> <i class="fab fa-github"></i> Build TensorFlow (CPU) from Source on macOS</a></li>
-        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/tensorflow.txt"> <i class="fab fa-github"></i> Build TensorFlow (CPU) from Source on Linux</a></li>
-        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/Build-TensorFlow-Linux/Build-TensorFlow-GPU-Linux.txt"> <i class="fab fa-github"></i> Build TensorFlow (GPU) from Source on Linux</a></li>
-        <li><a href="https://github.com/SuperBruceJia/paper-reading/tree/master/learn-docker"> <i class="fab fa-github"></i> Docker Basic Commands</a></li>
-        <li><a href="https://github.com/SuperBruceJia/paper-reading/tree/master/learn-vim"> <i class="fab fa-github"></i> Vim Basic Commands</a></li>
-        <li><a href="https://github.com/SuperBruceJia/paper-reading/tree/master/learn-git"> <i class="fab fa-github"></i> Git Basic Commands</a></li>
         <li><a href="https://github.com/SuperBruceJia/CityU-MPhil-Thesis"> <i class="fab fa-github"></i> M.Phil. Thesis (LaTeX), City University of Hong Kong</a></li>
 
       <p><font color="#9933CC">𝐄𝐱𝐜𝐞𝐥𝐥𝐞𝐧𝐭 𝐏𝐫𝐞𝐬𝐞𝐧𝐭𝐚𝐭𝐢𝐨𝐧</font></p>
@@ -247,10 +210,6 @@
         <li><a href="./resources/中国计算机学会CCF推荐国际学术会议和期刊目录_2019.pdf"> <i class="fab fa fa-file-pdf-o"></i> 中国计算机学会推荐国际学术会议和期刊目录 (2019)</a></li>
         <li><a href="./resources/中国科学院SCI分区表_2019.xls"> <i class="fa fa-file-excel-o" style="font-size:24px;color:red"></i> 中国科学院SCI分区表 (2019)</a></li>
         <li><a href="https://earlywarning.fenqubiao.com/#/README"> <i class="fab fa-internet-explorer"></i> 中国科学院国际期刊预警名单</a></li>
-        <li><a href="https://github.com/SuperBruceJia/paper-reading/tree/master/Programming-Standards/python"> <i class="fab fa-github"></i> Python编码风格与规范 @ Tencent</a></li>
-        <li><a href="https://github.com/SuperBruceJia/paper-reading/tree/master/Programming-Standards/cpp"> <i class="fab fa-github"></i> C++编码风格与规范 @ Tencent</a></li>
-        <li><a href="https://github.com/SuperBruceJia/paper-reading/tree/master/Programming-Standards/javascript"> <i class="fab fa-github"></i> JavaScript编码风格与规范 @ Tencent</a></li>
-        <li><a href="https://github.com/SuperBruceJia/paper-reading/tree/master/Programming-Standards/go"> <i class="fab fa-github"></i> Go编码风格与规范 @ Tencent</a></li>
         <li><a href="https://github.com/SuperBruceJia/CVPR-LaTeX-Paper-Template"> <i class="fab fa-github"></i> CVPR Paper, Supplementary Materials, and Rebuttal LaTeX Templates</a></li>
         <li><a href="https://github.com/SuperBruceJia/Poster_Template"> <i class="fab fa-github"></i> PowerPoint (PPT) and LaTeX Demos of Academic Posters</a></li>
         <li><a href="./resources/NSF-Guidelines.pdf"> <i class="fab fa fa-file-pdf-o"></i> National Science Foundation (NSF) Proposal & Award Policies & Procedures Guide (PAPPG)</a></li>
@@ -785,9 +744,9 @@
       <li><a href="https://ieeeboston.org" style="color:black;">Local Conference Committee, IEEE Boston Section</a></li>
       <li><a href="https://ieee-icad.org/?page_id=121" style="color:black;">Speaker Program Chair (Keynotes & Panel Sessions), <br>
         2025 IEEE International Conference on AI and Data Analytics (ICAD)</a></li>
+      <li><a href="https://amia.org/education-events/amia-2025-clinical-informatics-conference/spc" style="color:black;">Scientific Program Committee Member, 2025 AMIA Clinical Informatics Conference</a></li>
     </ul>
   </li>
-  
   <li><strong>Member</strong> of <a href="https://www.ieee.org" style="color:black;">IEEE</a>, <a href="https://www.acm.org" style="color:black;">ACM</a>, <a href="https://www.aclweb.org/portal/what-is-cl" style="color:black;">ACL</a>, and <a href="https://aaai.org" style="color:black;">AAAI</a></li>
 </ol>
 
