--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
         <li><a href="./books/Computer%20Organization%20and%20Design-%20The%20Hardware%3ASoftware%20Interface.pdf"> <i class="fab fa fa-book"></i> Computer Organization and Design: The Hardware/Software Interface (David A. Patterson and John L. Hennessy)</a></li>
         
       <p><font color="#9933CC">𝐀𝐜𝐚𝐝𝐞𝐦𝐢𝐜 𝐑𝐞𝐬𝐨𝐮𝐫𝐜𝐞𝐬</font></p>
+        <li><a href="./resources/How-to-be-a-good-Meta-Reviewer.pdf"> <i class="fab fa fa-file-pdf-o"></i> How to be a Good Meta-reviewer? by ICML 2022 Program Chairs</a></li>
         <li><a href="./resources/How_Junior_Faculty_Can_Secure_Industry_Funding.pdf"> <i class="fab fa fa-file-pdf-o"></i> How Junior Faculty Can Secure Industry Funding? by Prof. Zhou Yu</a></li>
         <li><a href="./resources/Writing-and-Technical-Presentations.pdf"> <i class="fab fa fa-file-pdf-o"></i> Writing and Technical Presentations by Prof. Ayse Coskun</a></li>
         <li><a href="./resources/English-Writing.pdf"> <i class="fab fa fa-file-pdf-o"></i> The Most Common Habits from more than 200 English Papers written by Graduate Chinese Engineering Students by Felicia Brittman</a></li>
