--- a/index.html
+++ b/index.html
@@ -104,15 +104,16 @@
   
   𝗥𝗲𝘀𝗲𝗮𝗿𝗰𝗵 𝗜𝗻𝘁𝗲𝗿𝗲𝘀𝘁𝘀:<br>
   In my career life, I keep seeking for a sweet spot between engaging in exciting research and open-sourcing impactful software and AI systems:
-  <li>Multimodal Large Language Models (MLLMs)</li>
-  <li>AI Agent with Tool Planning and Using</li>
-  <li>Large Language Models (LLMs)
+  <li>Multimodal Foundation Model (FM)</li>
+  <li>AI Agent with Tool Using</li>
+  <li>Large Vision-Language Model (VLM)</li>
+  <li>Large Language Model (LLM)
     <ul class="arrow-list">
       <li>Continual Pre-training [<a href="https://www.medrxiv.org/content/10.1101/2024.07.11.24310304v1">1</a>]</li>
-      <li>Retrieval-augmented Generation (RAG) [<a href="https://www.medrxiv.org/content/10.1101/2024.07.11.24310304v2">1</a>]</li>
+      <li>Retrieval-Augmented Generation (RAG) [<a href="https://www.medrxiv.org/content/10.1101/2024.07.11.24310304v2">1</a>]</li>
     </ul>
   </li>
-  <li>Generative AI [<a href="https://ieeexplore.ieee.org/document/10566053">1</a>]</li>
+  <li>Diffusion Model [<a href="https://ieeexplore.ieee.org/document/10566053">1</a>]</li>
   <li>Computer Vision [<a href="https://ieeexplore.ieee.org/document/9950035">1</a>, <a href="https://github.com/SuperBruceJia/Sonar-Image-Segmentation-through-Entropy-Method">2</a>]</li>
   <li>Natural Language Processing [<a href="https://github.com/SuperBruceJia/promptcraft">1</a>, <a href="https://github.com/SuperBruceJia/Medical-Concept-Mapping">2</a>, <a href="https://github.com/SuperBruceJia/MedicalNER">3</a>]</li>
   <li>AI4Science [<a href="https://ieeexplore.ieee.org/document/9889159">1</a>, <a href="https://www.frontiersin.org/journals/bioengineering-and-biotechnology/articles/10.3389/fbioe.2021.706229/full">2</a>, <a href="https://iopscience.iop.org/article/10.1088/1741-2552/ab4af6">3</a>]</li>
