--- a/index.html
+++ b/index.html
@@ -106,16 +106,27 @@
   In my career life, I keep seeking for a sweet spot between engaging in exciting research and open-sourcing impactful software and AI systems:
   <li>Multimodal Foundation Model (FM)</li>
   <li>AI Agent with Tool Using</li>
-  <li>Large Vision-Language Model (VLM)</li>
+  <li>Large Vision-language Model (VLM)</li>
   <li>Large Language Model (LLM)
     <ul class="arrow-list">
       <li>Continual Pre-training [<a href="https://www.medrxiv.org/content/10.1101/2024.07.11.24310304v1">1</a>]</li>
-      <li>Retrieval-Augmented Generation (RAG) [<a href="https://www.medrxiv.org/content/10.1101/2024.07.11.24310304v2">1</a>]</li>
+      <li>Retrieval-augmented Generation (RAG) [<a href="https://www.medrxiv.org/content/10.1101/2024.07.11.24310304v2">1</a>]</li>
     </ul>
   </li>
   <li>Diffusion Model [<a href="https://ieeexplore.ieee.org/document/10566053">1</a>]</li>
-  <li>Computer Vision [<a href="https://ieeexplore.ieee.org/document/9950035">1</a>, <a href="https://github.com/SuperBruceJia/Sonar-Image-Segmentation-through-Entropy-Method">2</a>]</li>
-  <li>Natural Language Processing [<a href="https://github.com/SuperBruceJia/promptcraft">1</a>, <a href="https://github.com/SuperBruceJia/Medical-Concept-Mapping">2</a>, <a href="https://github.com/SuperBruceJia/MedicalNER">3</a>]</li>
+  <li>Computer Vision
+    <ul class="arrow-list">
+      <li>Image Quality Assessment (IQA) [<a href="https://ieeexplore.ieee.org/abstract/document/9950035">1</a>, <a href="https://ietresearch.onlinelibrary.wiley.com/doi/full/10.1049/ell2.12698">2</a>]</li>
+      <li>Image Segmentation [<a href="https://github.com/SuperBruceJia/Sonar-Image-Segmentation-through-Entropy-Method">1</a>]</li>
+    </ul>
+  </li>
+  <li>Natural Language Processing
+    <ul class="arrow-list">
+      <li>Prompt Perturbation Toolkit [<a href="https://github.com/SuperBruceJia/promptcraft">1</a>]</li>
+      <li>Medical Concept Mapping [<a href="https://github.com/SuperBruceJia/Medical-Concept-Mapping">1</a>]</li>
+      <li>Medical Named Entity Recognition (NER) [<a href="https://github.com/SuperBruceJia/promptcraft">1</a>]</li>
+    </ul>
+  </li>
   <li>AI4Science [<a href="https://ieeexplore.ieee.org/document/9889159">1</a>, <a href="https://www.frontiersin.org/journals/bioengineering-and-biotechnology/articles/10.3389/fbioe.2021.706229/full">2</a>, <a href="https://iopscience.iop.org/article/10.1088/1741-2552/ab4af6">3</a>]</li>
   
   <br>
