--- a/index.html.tmp.html
+++ b/index.html.tmp.html
@@ -23,8 +23,8 @@
     
     <link rel="shortcut icon" href="bu.ico">
     <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700" rel="stylesheet" type="text/css">
-    <link rel="alternate" type="application/rss+xml" title="Shuyue Jia RSS" href="/feed.xml" />
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="alternate" type="application/rss+xml" title="Shuyue Jia RSS" href="file:///Users/brucejia/Documents/Homepage.io/feed.xml" />
+    <link rel="stylesheet" href="file:///Users/brucejia/Documents/Homepage.io/css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -96,8 +96,15 @@
   <br>
   <br>
   
+  𝗢𝗽𝗲𝗻-𝘀𝗼𝘂𝗿𝗰𝗲 𝗣𝗿𝗼𝗷𝗲𝗰𝘁𝘀:<br>
+  Please visit and star our open-source project and comprehensive solution <a href="https://github.com/vkola-lab/PodGPT">PodGPT</a> on LLM text generation and <a href="https://github.com/vkola-lab/PodGPT/tree/main/rag_pipeline">PodRAG</a> on retrieval.
+  
+  <br>
+  <br>
+  
   𝗥𝗲𝘀𝗲𝗮𝗿𝗰𝗵 𝗜𝗻𝘁𝗲𝗿𝗲𝘀𝘁𝘀:<br>
-  In my career life, I keep seeking for a sweet spot between engaging in exciting research and open-sourcing impactful AI systems. My work focuses on the following dimensions:
+  In my career life, I keep seeking for a sweet spot between engaging in exciting research and open-sourcing impactful software and AI systems. 
+  My research focuses on the following three dimensions:
   <li>𝗠𝗲𝗮𝘀𝘂𝗿𝗲𝗺𝗲𝗻𝘁
     <ul class="arrow-list">
       <li>Quality Assessment of AIGC</li>
@@ -126,7 +133,7 @@
 
   <li>𝗧𝗼𝗼𝗹𝗸𝗶𝘁 & 𝗟𝗶𝗯𝗿𝗮𝗿𝘆 (𝗢𝗽𝗲𝗻-𝘀𝗼𝘂𝗿𝗰𝗲 𝗣𝗿𝗼𝗷𝗲𝗰𝘁)
     <ul class="arrow-list">
-      <li><a href="https://github.com/vkola-lab/PodGPT">PodGPT</a>: An audio-augmented LLM for research and education
+      <li><a href="https://github.com/vkola-lab/PodGPT">PodGPT</a>An audio-augmented LLM for research and education
         <iframe
           src="https://img.shields.io/github/stars/vkola-lab/PodGPT?style=social" 
           frameborder="0" scrolling="0" width="82px" height="20px">
@@ -136,17 +143,11 @@
           frameborder="0" scrolling="0" width="82px" height="20px">
         </iframe> 
       </li>
-      <li><a href="https://github.com/vkola-lab/PodGPT/tree/main/rag_pipeline">PodRAG</a>: PodGPT with a retrieval, reranking, and generation pipeline
-        <iframe
-          src="https://img.shields.io/github/stars/vkola-lab/PodGPT?style=social" 
-          frameborder="0" scrolling="0" width="82px" height="20px">
-        </iframe>
-        <iframe
-          src="https://img.shields.io/github/forks/vkola-lab/PodGPT?style=social" 
-          frameborder="0" scrolling="0" width="82px" height="20px">
-        </iframe>
-      </li>
-      <li><a href="https://github.com/SuperBruceJia/EEG-DL">EEG-DL</a>: A deep learning library for EEG signals classification
+      
+      <li style="line-height: 1.4;"> 𝙾𝚞𝚛 𝚜𝚘𝚕𝚞𝚝𝚒𝚘𝚗 𝚘𝚗 𝚛𝚎𝚝𝚛𝚒𝚎𝚟𝚊𝚕: <a href="https://github.com/vkola-lab/PodGPT/tree/main/rag_pipeline">PodRAG</a></li>
+
+      <li>
+        <a href="https://github.com/SuperBruceJia/EEG-DL">EEG-DL</a>: A deep learning library for EEG signals classification 
         <iframe
           src="https://img.shields.io/github/stars/SuperBruceJia/EEG-DL?style=social" 
           frameborder="0" scrolling="0" width="82px" height="20px">
@@ -156,7 +157,8 @@
           frameborder="0" scrolling="0" width="100px" height="20px">
         </iframe>
       </li>
-      <li><a href="https://github.com/SuperBruceJia/promptcraft">Prompt Perturbation</a>: A perturbation toolkit for prompt augmentation
+      <li>
+        <a href="https://github.com/SuperBruceJia/promptcraft">Prompt Perturbation</a>: A perturbation toolkit for prompt augmentation
         <iframe
           src="https://img.shields.io/github/stars/SuperBruceJia/promptcraft?style=social" 
           frameborder="0" scrolling="0" width="82px" height="20px">
