--- a/index.html
+++ b/index.html
@@ -91,16 +91,16 @@
 </div>
 
 <p>
-  I am a Ph.D. student in Computer Engineering at <a href="https://www.bu.edu/">Boston University</a>, under the supervision of <a href="https://vkola-lab.github.io/team/" style="color:black;">Prof. Vijaya Kolachalama</a>. Prior to BU, I received my M.Phil. degree (2023) in Computer Science from <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>, supervised by <a href="https://www.cs.cityu.edu.hk/~shiqwang/" style="color:black;">Prof. Shiqi Wang</a>. In 2017, I attended a summer school at <a href="https://uci.edu/">University of California, Irvine</a>.
+  I am a Ph.D. student in Computer Engineering at <a href="https://www.bu.edu">Boston University</a>, under the supervision of <a href="https://vkola-lab.github.io/team" style="color:black;">Prof. Vijaya Kolachalama</a>. Prior to BU, I received my M.Phil. degree (2023) in Computer Science from <a href="https://www.cityu.edu.hk">City University of Hong Kong</a>, supervised by <a href="https://www.cs.cityu.edu.hk/~shiqwang" style="color:black;">Prof. Shiqi Wang</a>, and B.Eng. degree (2020) in Intelligence Science and Technology from <a href="https://www.neepu.edu.cn">Northeast Electric Power University</a>, supervised by <a href="https://ieeexplore.ieee.org/author/37290052900" style="color:black;">Prof. Yimin Hou</a> and <a href="https://www.sydney.edu.au/engineering/about/our-people/academic-staff/jinglei-lv.html" style="color:black;">Prof. Jinglei Lv</a>. In 2017, I attended a summer school at <a href="https://uci.edu">University of California, Irvine</a>.
   
   <br>
   <br>
   
   𝗥𝗲𝘀𝗲𝗮𝗿𝗰𝗵 𝗜𝗻𝘁𝗲𝗿𝗲𝘀𝘁𝘀:<br>
-  In my career life, I keep seeking for a sweet spot between engaging in exciting research and open-sourcing impactful AI systems. My work focuses on the following dimensions:
+  My Ph.D. research focuses on <b>grounding AI systems</b> as a pathway toward Artificial General Intelligence (AGI), with an emphasis on developing safe, reliable, and extensible foundations. Specifically, my work focuses on the following dimensions:
   <li>𝗠𝗲𝗮𝘀𝘂𝗿𝗲𝗺𝗲𝗻𝘁
     <ul class="arrow-list">
-      <li>Quality Assessment of AIGC</li>
+      <li>Quality Assessment of Natural Language Generations (NLG)</li>
       <li>Quality Assessment of Natural Images [<a href="https://ieeexplore.ieee.org/abstract/document/9950035">1</a>, <a href="https://ietresearch.onlinelibrary.wiley.com/doi/full/10.1049/ell2.12698">2</a>]</li>
     </ul>
   </li>
@@ -108,19 +108,19 @@
   <li>𝗠𝗼𝗱𝗲𝗹𝗶𝗻𝗴
     <ul class="arrow-list">
       <li>Multimodal Foundation Model (FM)</li>
-      <li>AI Agent with Tool Using</li>
+      <li>LLM-based Agent, Vision-language Agent (VLA), and Multi-agent System (MAS)</li>
       <li>Large Vision-language Model (VLM)</li>
       <li>Diffusion Model [<a href="https://ieeexplore.ieee.org/document/10566053">1</a>]</li>
-      <li>Graph CNN for EEG [<a href="https://ieeexplore.ieee.org/document/9889159">1</a>]</li>
-      <li>Attention-based BiLSTM-GCN for EEG [<a href="https://www.frontiersin.org/journals/bioengineering-and-biotechnology/articles/10.3389/fbioe.2021.706229/full">1</a>]</li>
-      <li>CNN for EEG [<a href="https://iopscience.iop.org/article/10.1088/1741-2552/ab4af6">1</a>]</li>
+      <li>Graph CNN (GCN) [<a href="https://ieeexplore.ieee.org/document/9889159">1</a>]</li>
+      <li>Attention-based BiLSTM-GCN [<a href="https://www.frontiersin.org/journals/bioengineering-and-biotechnology/articles/10.3389/fbioe.2021.706229/full">1</a>]</li>
+      <li>CNN [<a href="https://iopscience.iop.org/article/10.1088/1741-2552/ab4af6">1</a>]</li>
     </ul>
   </li>
 
   <li>𝗢𝗽𝘁𝗶𝗺𝗶𝘇𝗮𝘁𝗶𝗼𝗻
     <ul class="arrow-list">
-      <li>Continual Pre-training of LLMs [<a href="https://www.medrxiv.org/content/10.1101/2024.07.11.24310304v1">1</a>]</li>
-      <li>Retrieval-augmented Generation (RAG) [<a href="https://www.medrxiv.org/content/10.1101/2024.07.11.24310304v2">1</a>]</li>
+      <li>Continual Pre-training of LLM [<a href="https://www.medrxiv.org/content/10.1101/2024.07.11.24310304v1">1</a>, <a href="https://www.nature.com/articles/s44385-025-00022-0">2</a>]</li>
+      <li>Retrieval-augmented Generation (RAG) [<a href="https://www.nature.com/articles/s44385-025-00022-0">1</a>]</li>
     </ul>
   </li>
 
@@ -149,7 +149,7 @@
       <li><a href="https://github.com/SuperBruceJia/EEG-DL">EEG-DL</a>: A deep learning library for EEG signals classification
         <iframe
           src="https://img.shields.io/github/stars/SuperBruceJia/EEG-DL?style=social" 
-          frameborder="0" scrolling="0" width="82px" height="20px">
+          frameborder="0" scrolling="0" width="90px" height="20px">
         </iframe>
         <iframe
           src="https://img.shields.io/github/forks/SuperBruceJia/EEG-DL?style=social" 
@@ -369,7 +369,7 @@
     <strong>Dec 2024</strong> We have released the source code for Our <a href="https://github.com/vkola-lab/PodGPT/tree/main/rag_pipeline"> PodGPT with Retrieval-Augmented Generation (RAG)</a>. This powerful pipeline allows our model to ground responses with the latest scientific evidence from top-tier literature, such as <em>The New England Journal of Medicine</em> (NEJM)!
   </li>
   <li>
-    <strong>Nov 2024</strong> Our <a href="https://www.medrxiv.org/content/10.1101/2024.07.11.24310304v2"> PodGPT preprint</a> is available online! It is an audio-augmented Large Language Model (LLM) for STEMM research and education.
+    <strong>Nov 2024</strong> Our <a href="https://www.nature.com/articles/s44385-025-00022-0"> PodGPT preprint</a> is available online! It is an audio-augmented Large Language Model (LLM) for STEMM research and education.
   </li>
   <li>
     <strong>Oct 2024</strong> We have launched <b>PodRAG</b> on our <a href="https://podgpt.org/">PodGPT</a> platform with the advanced 𝗥𝗲𝘁𝗿𝗶𝗲𝘃𝗮𝗹-𝗔𝘂𝗴𝗺𝗲𝗻𝘁𝗲𝗱 𝗚𝗲𝗻𝗲𝗿𝗮𝘁𝗶𝗼𝗻 (𝗥𝗔𝗚) techniques! It is designed to provide 𝘁𝗵𝗲 𝗺𝗼𝘀𝘁 𝗮𝗰𝗰𝘂𝗿𝗮𝘁𝗲 𝗮𝗻𝗱 𝘂𝗽-𝘁𝗼-𝗱𝗮𝘁𝗲 𝗶𝗻𝗳𝗼𝗿𝗺𝗮𝘁𝗶𝗼𝗻 for medical education and research! Please try it out if you are interested!
@@ -542,7 +542,7 @@
     <div style="float:right;">
       <a href="https://medpodgpt.org"><i class="fa fa-codepen"></i> Product</a>
       <a href="https://github.com/vkola-lab/podgpt"><i class="fa fa-github"></i> Codes</a>
-      <a href="https://www.medrxiv.org/content/10.1101/2024.07.11.24310304v2"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
+      <a href="https://www.nature.com/articles/s44385-025-00022-0"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
     </div><br>
     <strong>Shuyue Jia</strong>, Subhrangshu Bit, Edward Searls, Meagan V. Lauber, Lindsey A. Claus, Pengrui Fan, Varuna H. Jasodanand, Divya Veerapaneni, William M. Wang, Rhoda Au, Vijaya B. Kolachalama
     <br><em>Nature npj Biomedical Innovations</em>
