--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
   My Ph.D. research focuses on <b>grounding AI systems</b> as a pathway toward Artificial General Intelligence (AGI), with an emphasis on developing safe, reliable, and extensible foundations. Specifically, my work focuses on the following dimensions:
   <li>𝗠𝗲𝗮𝘀𝘂𝗿𝗲𝗺𝗲𝗻𝘁
     <ul class="arrow-list">
-      <li>Quality Assessment of Natural Language Generations (NLG)</li>
-      <li>Quality Assessment of Natural Images [<a href="https://ieeexplore.ieee.org/abstract/document/9950035">1</a>, <a href="https://ietresearch.onlinelibrary.wiley.com/doi/full/10.1049/ell2.12698">2</a>]</li>
+      <li>Quality Estimation of Natural Language Generation (NLG)</li>
+      <li>Quality Assessment of Natural Image [<a href="https://ieeexplore.ieee.org/abstract/document/9950035">1</a>, <a href="https://ietresearch.onlinelibrary.wiley.com/doi/full/10.1049/ell2.12698">2</a>]</li>
     </ul>
   </li>
 
