--- a/index.html
+++ b/index.html
@@ -169,6 +169,17 @@
     </ul>
   </li>
   
+  <li>𝗠𝗮𝗶𝗻𝘁𝗮𝗶𝗻𝗲𝗱 𝗚𝗶𝘁𝗛𝘂𝗯 𝗥𝗲𝗽𝗼 𝗳𝗼𝗿 𝗟𝗶𝘁𝗲𝗿𝗮𝘁𝘂𝗿𝗲 𝗦𝘂𝗿𝘃𝗲𝘆<br>
+    <ul class="arrow-list">
+      Welcome to contribute and work together!
+      <li><a href="https://github.com/SuperBruceJia/Awesome-Large-Vision-Language-Model">Awesome Large Vision-Language Model (VLM)</a></li>
+      <li><a href="https://github.com/SuperBruceJia/Awesome-Mixture-of-Experts">Awesome Mixture of Experts (MoE)</a></li>
+      <li><a href="https://github.com/SuperBruceJia/Awesome-LLM-Self-Consistency">Awesome LLM Self-Consistency</a></li>
+      <li><a href="https://github.com/SuperBruceJia/Awesome-Text-Generation-Evaluation">Awesome Text/Natural Language Generation (NLG) Evaluation</a></li>
+      <li><a href="https://github.com/SuperBruceJia/Awesome-Semantic-Textual-Similarity">Awesome Semantic Textual Similarity (STS)</a></li>
+    </ul>
+  </li>
+
   <br>
   
   <details>
