--- a/index.html
+++ b/index.html
@@ -376,6 +376,9 @@
 <h2 id="news">News</h2>
 <ul style="list-style:none; margin:0; padding:0">
   <li>
+    <strong>Aug 2025</strong> Honored to join the <a href="./awards/SigmaXi_2025.pdf">Sigma Xi, The Scientific Research Honor Society</a>.
+  </li>
+  <li>
     <strong>Aug 2025</strong> A <a href="./files/Presentation/Evidence-Retrieval-and-Grounding.pdf"> Presentation</a> of Evidence Retrieval and Grounding in Medicine.
   </li>
   <li>
@@ -858,6 +861,7 @@
     <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=42" style="color:black;">IEEE Transactions on Medical Imaging (IEEE T-MI)</a><br>
     <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=10" style="color:black;">IEEE Transactions on Biomedical Engineering (IEEE T-BME)</a><br>
     <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=9424" style="color:black;">IEEE Transactions on Industrial Informatics (IEEE T-II)</a><br>
+    <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6221037" style="color:black;">IEEE Transactions on Human-Machine Systems (IEEE T-HMS)</a><br>
     <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6221020" style="color:black;">IEEE Journal of Biomedical and Health Informatics (IEEE JBHI)</a><br>
     <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=4200690" style="color:black;">IEEE Journal of Selected Topics in Signal Processing (IEEE J-STSP)</a><br>
     <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=8782706" style="color:black;">IEEE Open Journal of the Industrial Electronics Society (IEEE OJIES)</a><br>
@@ -872,8 +876,8 @@
   <li><strong>Committee Member</strong> of<br>
     <ul>
       <li><a href="https://ieeeboston.org" style="color:black;">Local Conference Committee, IEEE Boston Section</a></li>
-      <li><a href="https://ieee-icad.org/?page_id=121" style="color:black;">Speaker Program Chair (Keynotes & Panel Sessions), <br>
-        2025 IEEE International Conference on AI and Data Analytics (ICAD)</a></li>
+      <li><a href="https://ieee-icad.org/?page_id=121" style="color:black;">Speaker Program Chair (Keynotes & Panel Sessions), 2026 IEEE International Conference on AI and Data Analytics (ICAD)</a></li>
+      <li><a href="https://ieee-icad.org/?page_id=121" style="color:black;">Speaker Program Chair (Keynotes & Panel Sessions), 2025 IEEE International Conference on AI and Data Analytics (ICAD)</a></li>
       <li><a href="https://amia.org/education-events/amia-2025-clinical-informatics-conference/spc" style="color:black;">Scientific Program Committee Member, 2025 AMIA Clinical Informatics Conference</a></li>
     </ul>
   </li>
