--- a/index.html
+++ b/index.html
@@ -915,8 +915,8 @@
   <li><strong>Committee Member</strong> of<br>
     <ul>
       <li><a href="https://ieeeboston.org" style="color:black;">Local Conference Committee, IEEE Boston Section</a></li>
-      <li><a href="https://ieee-icad.org/?page_id=121" style="color:black;">Speaker Program Chair (Keynotes & Panel Sessions), 2026 IEEE International Conference on AI and Data Analytics (ICAD)</a></li>
-      <li><a href="https://ieee-icad.org/?page_id=121" style="color:black;">Speaker Program Chair (Keynotes & Panel Sessions), 2025 IEEE International Conference on AI and Data Analytics (ICAD)</a></li>
+      <li><a href="https://ieee-icad.org/icad-committee/" style="color:black;">Speaker Program Chair (Keynotes & Panel Sessions), 2026 IEEE International Conference on AI and Data Analytics (ICAD)</a></li>
+      <li><a href="https://ieee-icad.org/icad-committee/" style="color:black;">Speaker Program Chair (Keynotes & Panel Sessions), 2025 IEEE International Conference on AI and Data Analytics (ICAD)</a></li>
       <li><a href="https://amia.org/education-events/amia-2025-clinical-informatics-conference/spc" style="color:black;">Scientific Program Committee Member, 2025 AMIA Clinical Informatics Conference</a></li>
     </ul>
   </li>
