--- a/index.html
+++ b/index.html
@@ -249,8 +249,6 @@
         <li><a href="./books/Computer%20Organization%20and%20Design-%20The%20Hardware%3ASoftware%20Interface.pdf"> <i class="fab fa fa-book"></i> Computer Organization and Design: The Hardware/Software Interface (David A. Patterson and John L. Hennessy)</a></li>
       
       <p><font color="#9933CC">𝐀𝐜𝐚𝐝𝐞𝐦𝐢𝐜 𝐑𝐞𝐬𝐨𝐮𝐫𝐜𝐞𝐬</font></p>
-        <li><a href="./resources/How-to-be-a-good-Meta-Reviewer.pdf"> <i class="fab fa fa-file-pdf-o"></i> How to be a Good Meta-reviewer? by ICML 2022 Program Chairs</a></li>
-        <li><a href="./resources/How_Junior_Faculty_Can_Secure_Industry_Funding.pdf"> <i class="fab fa fa-file-pdf-o"></i> How Junior Faculty Can Secure Industry Funding? by Prof. Zhou Yu</a></li>
         <li><a href="./resources/Writing-and-Technical-Presentations.pdf"> <i class="fab fa fa-file-pdf-o"></i> Writing and Technical Presentations by Prof. Ayse Coskun</a></li>
         <li><a href="./resources/English-Writing.pdf"> <i class="fab fa fa-file-pdf-o"></i> The Most Common Habits from more than 200 English Papers written by Graduate Chinese Engineering Students by Felicia Brittman</a></li>
         <li><a href="./resources/How_to_Write_Good_Research_Articles_Xiaohua_JIA.pdf"> <i class="fab fa fa-file-pdf-o"></i> How to Write Good Research Articles by Prof. Xiaohua Jia</a></li>
@@ -278,6 +276,9 @@
         <li><a href="https://github.com/SuperBruceJia/Poster_Template"> <i class="fab fa-github"></i> PowerPoint (PPT) and LaTeX Demos of Academic Posters</a></li>
         <li><a href="https://aiindex.stanford.edu/report/"> <i class="fab fa-internet-explorer"></i> Artificial Intelligence Index Report by Stanford</a></li>
         <li><a href="https://www.icmje.org/recommendations/browse/roles-and-responsibilities/defining-the-role-of-authors-and-contributors.html"> <i class="fab fa-internet-explorer"></i> Defining the Role of Authors and Contributors by International Committee of Medical Journal Editors</a></li>
+        <li><a href="./resources/Instruction_to_Reviewers_IEEE-TMI.pdf"> <i class="fab fa fa-file-pdf-o"></i> How to review a paper? by IEEE T-MI</a></li>
+        <li><a href="./resources/How-to-be-a-good-Meta-Reviewer.pdf"> <i class="fab fa fa-file-pdf-o"></i> How to be a Good Meta-reviewer? by ICML 2022 Program Chairs</a></li>
+        <li><a href="./resources/How_Junior_Faculty_Can_Secure_Industry_Funding.pdf"> <i class="fab fa fa-file-pdf-o"></i> How Junior Faculty Can Secure Industry Funding? by Prof. Zhou Yu</a></li>
 
       <p><font color="#9933CC">𝐑𝐞𝐜𝐨𝐦𝐦𝐞𝐧𝐝𝐞𝐝 𝐑𝐞𝐚𝐝𝐢𝐧𝐠𝐬</font></p>
         <li><a href="./resources/Research_Life.pdf"> <i class="fab fa fa-file-pdf-o"></i> 文章千古事, 得失寸心知 by Prof. Song-Chun Zhu</a></li>
@@ -364,6 +365,9 @@
 
 <h2 id="news">News</h2>
 <ul style="list-style:none; margin:0; padding:0">
+  <li>
+    <strong>Sept 2025</strong> Honored to receive the <a href="./awards/IEEE_MM_Reviewer_Certificate_Email.pdf">2024 IEEE MultiMedia Reviewer Certiﬁcate</a> from <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=93">IEEE MultiMedia</a>, recognizing my qualifications and reputations in the field (<a href="./awards/IEEE_MultiMedia_reviewer_certificate.pdf">Certificate</a>).
+  </li>
   <li>
     <strong>Aug 2025</strong> Our paper <a href="https://openreview.net/pdf?id=msinSJ5w16">DocAgent</a> is accepted by <em>EMNLP 2025</em>.
   </li>
@@ -901,6 +905,7 @@
     <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=10" style="color:black;">IEEE Transactions on Biomedical Engineering (IEEE T-BME)</a><br>
     <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=9424" style="color:black;">IEEE Transactions on Industrial Informatics (IEEE T-II)</a><br>
     <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6221037" style="color:black;">IEEE Transactions on Human-Machine Systems (IEEE T-HMS)</a><br>
+    <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=7433297" style="color:black;">IEEE Transactions on Emerging Topics in Computational Intelligence (IEEE T-ETCI)</a><br>
     <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6221020" style="color:black;">IEEE Journal of Biomedical and Health Informatics (IEEE JBHI)</a><br>
     <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=4200690" style="color:black;">IEEE Journal of Selected Topics in Signal Processing (IEEE J-STSP)</a><br>
     <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=8782706" style="color:black;">IEEE Open Journal of the Industrial Electronics Society (IEEE OJIES)</a><br>
