--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
 <h2 id="news">News</h2>
 <ul style="list-style:none; margin:0; padding:0">
   <li>
-    <strong>Sept 2025</strong> Honored to receive the <a href="./awards/IEEE_MM_Reviewer_Certificate_Email.pdf">2024 IEEE MultiMedia Reviewer Certiﬁcate</a> from <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=93">IEEE MultiMedia</a>, recognizing my qualifications and reputations in the field (<a href="./awards/IEEE_MultiMedia_reviewer_certificate.pdf">Certificate</a>).
+    <strong>Sept 2025</strong> Glad to receive the <a href="./awards/IEEE_MM_Reviewer_Certificate_Email.pdf">2024 IEEE MultiMedia Reviewer Certiﬁcate</a> from <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=93">IEEE MultiMedia</a>, recognizing my qualifications and reputations in the field (<a href="./awards/IEEE_MultiMedia_reviewer_certificate.pdf">Certificate</a>).
   </li>
   <li>
     <strong>Aug 2025</strong> Our paper <a href="https://openreview.net/pdf?id=msinSJ5w16">DocAgent</a> is accepted by <em>EMNLP 2025</em>.
