--- a/index.html
+++ b/index.html
@@ -912,6 +912,7 @@
     <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=8782664" style="color:black;">IEEE Open Journal of the Computer Society (IEEE OJCS)</a><br>
     <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=93" style="color:black;">IEEE MultiMedia (MM)</a><br>
     <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=7361" style="color:black;">IEEE Sensors Journal</a><br>
+    <a href="https://ietresearch.onlinelibrary.wiley.com/journal/17518830" style="color:black;">IET Science, Measurement & Technology</a><br>  
     <a href="https://www.jmir.org" style="color:black;">Journal of Medical Internet Research</a>
   </li>
   <li><strong>Conference Reviewer</strong> of<br>
@@ -920,6 +921,7 @@
   <li><strong>Committee Member</strong> of<br>
     <ul>
       <li><a href="https://ieeeboston.org" style="color:black;">Local Conference Committee, IEEE Boston Section</a></li>
+      <li><a href="https://ieee-icad.org/icad-committee/" style="color:black;">Steering Committee, 2026 IEEE International Conference on AI and Data Analytics (ICAD)</a></li>
       <li><a href="https://ieee-icad.org/icad-committee/" style="color:black;">Speaker Program Chair (Keynotes & Panel Sessions), 2025 IEEE International Conference on AI and Data Analytics (ICAD)</a></li>
       <li><a href="https://amia.org/education-events/amia-2025-clinical-informatics-conference/spc" style="color:black;">Scientific Program Committee Member, 2025 AMIA Clinical Informatics Conference</a></li>
     </ul>
