--- a/index.html
+++ b/index.html
@@ -907,6 +907,7 @@
     <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=9424" style="color:black;">IEEE Transactions on Industrial Informatics (IEEE T-II)</a><br>
     <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6221037" style="color:black;">IEEE Transactions on Human-Machine Systems (IEEE T-HMS)</a><br>
     <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=5165369" style="color:black;">IEEE Transactions on Affective Computing (IEEE T-AFFC)</a><br>
+    <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=7274989" style="color:black;">IEEE Transactions on Cognitive and Developmental Systems (IEEE T-CDS)</a><br>
     <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=7433297" style="color:black;">IEEE Transactions on Emerging Topics in Computational Intelligence (IEEE T-ETCI)</a><br>
     <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6221020" style="color:black;">IEEE Journal of Biomedical and Health Informatics (IEEE JBHI)</a><br>
     <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=4200690" style="color:black;">IEEE Journal of Selected Topics in Signal Processing (IEEE J-STSP)</a><br>
