--- a/index.html
+++ b/index.html
@@ -366,6 +366,9 @@
 <h2 id="news">News</h2>
 <ul style="list-style:none; margin:0; padding:0">
   <li>
+    <strong>Oct 2025</strong> I will serve as a Technical Track co-chair volunteer for IEEE MIT URTC 2025.
+  </li>
+  <li>
     <strong>Sept 2025</strong> Glad to receive the <a href="./awards/IEEE_MultiMedia_reviewer_certificate.pdf">2024 IEEE MultiMedia Reviewer Certiﬁcate</a> from <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=93">IEEE MultiMedia</a> and the <a href="./awards/CVIU_reviewer_certificate.pdf">Certificate of Reviewing</a> from <a href="https://www.sciencedirect.com/journal/computer-vision-and-image-understanding">Computer Vision and Image Understanding</a>.
   </li>
   <li>
