--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
     <strong>Oct 2025</strong> I will serve as a Technical Track co-chair volunteer for IEEE MIT URTC 2025.
   </li>
   <li>
-    <strong>Sept 2025</strong> Glad to receive the <a href="./awards/IEEE_MultiMedia_reviewer_certificate.pdf">2024 IEEE MultiMedia Reviewer Certiﬁcate</a> from <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=93">IEEE MultiMedia</a> and the <a href="./awards/CVIU_reviewer_certificate.pdf">Certificate of Reviewing</a> from <a href="https://www.sciencedirect.com/journal/computer-vision-and-image-understanding">Computer Vision and Image Understanding</a>.
+    <strong>Sept 2025</strong> Glad to receive the <a href="./awards/IEEE_MultiMedia_reviewer_certificate.pdf">2024 IEEE MultiMedia Reviewer Certiﬁcate</a> from <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=93">IEEE MultiMedia</a>, the <a href="./awards/IEEE_OJCS_reviewer_certificate.pdf">2024 Reviewer Certiﬁcate</a> from <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=8782664">IEEE Open Journal of the Computer Society</a>, and the <a href="./awards/CVIU_reviewer_certificate.pdf">Certificate of Reviewing</a> from <a href="https://www.sciencedirect.com/journal/computer-vision-and-image-understanding">Computer Vision and Image Understanding</a>.
   </li>
   <li>
     <strong>Aug 2025</strong> I will serve as Speaker Program Chair (Keynotes & Panel Sessions) and Steering Committee for IEEE ICAD 2026. Please fill out this <a href="https://forms.gle/wpRSebweXdLVjxwi9">Google Form</a> if you’re interested in being a speaker at our conference!
