--- a/index.html
+++ b/index.html
@@ -343,6 +343,11 @@
     
     <p><font color="#9933CC">𝗜𝗘𝗘𝗘 𝗧𝗲𝗮𝗺</font></p>
     <div class="profile-container">
+      <img width="99%device-width" src="./imgs/IEEE/IEEE_2025.png" /><br><br>
+      <p class="image-description">Our IEEE Local Conference Committee Team @ <a href="https://ieeeboston.org">IEEE Boston Section</a></p>
+      <p class="image-description">Joyce Cummings Center, School of Engineering, Tufts University, 177 College Avenue, Medford, MA (Spring 2025)</p>
+    </div>
+    <div class="profile-container">
       <img width="99%device-width" src="./imgs/IEEE/IEEE_2024.JPG" /><br><br>
       <p class="image-description">Our IEEE Local Conference Committee Team @ <a href="https://ieeeboston.org">IEEE Boston Section</a></p>
       <p class="image-description">Crowne Plaza, 15 Canal Park, Woburn, MA (Fall 2024)</p>
@@ -366,13 +371,16 @@
 <h2 id="news">News</h2>
 <ul style="list-style:none; margin:0; padding:0">
   <li>
+    <strong>Nov 2025</strong> I was appointed as the Area Chair (2026–2027) for the IEEE Boston Section Circuits and Systems (CAS) Society. If you’re interested in serving as a speaker, please complete this <a href="https://forms.gle/nw61BXSjH1mBaJAU6">application form</a>.
+  </li>
+  <li>
     <strong>Oct 2025</strong> I will serve as a Technical Track co-chair volunteer for IEEE MIT URTC 2025.
   </li>
   <li>
     <strong>Sept 2025</strong> Glad to receive the <a href="./awards/IEEE_MultiMedia_reviewer_certificate.pdf">2024 IEEE MultiMedia Reviewer Certiﬁcate</a> from <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=93">IEEE MultiMedia</a>, the <a href="./awards/IEEE_OJCS_reviewer_certificate.pdf">2024 Reviewer Certiﬁcate</a> from <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=8782664">IEEE Open Journal of the Computer Society</a>, and the <a href="./awards/CVIU_reviewer_certificate.pdf">Certificate of Reviewing</a> from <a href="https://www.sciencedirect.com/journal/computer-vision-and-image-understanding">Computer Vision and Image Understanding</a>.
   </li>
   <li>
-    <strong>Aug 2025</strong> I will serve as Speaker Program Chair (Keynotes & Panel Sessions) and Steering Committee for IEEE ICAD 2026. Please fill out this <a href="https://forms.gle/wpRSebweXdLVjxwi9">Google Form</a> if you’re interested in being a speaker at our conference!
+    <strong>Aug 2025</strong> I will serve as Speaker Program Chair (Keynotes & Panel Sessions) and Steering Committee for IEEE ICAD 2026. Please fill out this <a href="https://forms.gle/wpRSebweXdLVjxwi9">form</a> to apply as a speaker, or this <a href="https://forms.gle/gYnPirBgyKHxg1DS9">form</a> to sign up as a reviewer!
   </li>
   <li>
     <strong>Aug 2025</strong> Our paper <a href="https://openreview.net/pdf?id=msinSJ5w16">DocAgent</a> is accepted by <em>EMNLP 2025</em>.
