--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
       Shuyue Jia (<img class="chinese-name-img" src="./imgs/Profile/chinese_name.png"
         alt="贾舒越" style="width: 170px; height: auto; vertical-align: middle;">)
     </a>
-    <a id="author-name" class="alignable pull-right"
-      style="width: 260px; text-decoration:none; display: flex; align-items: center; transform: translateY(15px);"
-      href="https://brucejia.myportfolio.com">Photography</a>
+<!--<a id="author-name" class="alignable pull-right"-->
+<!--  style="width: 260px; text-decoration:none; display: flex; align-items: center; transform: translateY(15px);"-->
+<!--  href="https://brucejia.myportfolio.com">Photography</a>-->
   </div>
 <div style="clear:both"></div>
 
@@ -98,6 +98,12 @@
 <p>
   I am a Ph.D. student in Computer Engineering at <a href="https://www.bu.edu">Boston University</a>, under the supervision of <a href="https://vkola-lab.github.io/team" style="color:black;">Prof. Vijaya Kolachalama</a>. Prior to BU, I received my M.Phil. degree (2023) in Computer Science from <a href="https://www.cityu.edu.hk">City University of Hong Kong</a>, supervised by <a href="https://www.cs.cityu.edu.hk/~shiqwang" style="color:black;">Prof. Shiqi Wang</a>, and B.Eng. degree (2020) in Intelligence Science and Technology from <a href="https://www.neepu.edu.cn">Northeast Electric Power University</a>, supervised by <a href="https://ieeexplore.ieee.org/author/37290052900" style="color:black;">Prof. Yimin Hou</a> and <a href="https://www.sydney.edu.au/engineering/about/our-people/academic-staff/jinglei-lv.html" style="color:black;">Prof. Jinglei Lv</a>. In 2017, I attended a summer school at <a href="https://uci.edu">University of California, Irvine</a>.
   
+  <br>
+  <br>
+  
+  I’m also a 𝗪𝗲𝗱𝗱𝗶𝗻𝗴 & 𝗣𝗼𝗿𝘁𝗿𝗮𝗶𝘁 𝗣𝗵𝗼𝘁𝗼𝗴𝗿𝗮𝗽𝗵𝗲𝗿 based in Boston, MA. If you’d like to book a session, I’d love to hear from you—just send me an email!
+  <a href="https://brucejia.myportfolio.com/">Check out my collections here!</a>
+
   <br>
   <br>
   
@@ -931,7 +937,7 @@
     <a href="https://www.jmir.org" style="color:black;">Journal of Medical Internet Research (JMIR)</a>
   </li>
   <li><strong>Conference Reviewer</strong> of<br>
-    <a href="https://iclr.cc" style="color:black;">The International Conference on Learning Representations (ICLR) 2025</a>
+    <a href="https://iclr.cc" style="color:black;">The International Conference on Learning Representations (ICLR) 2025, 2026</a>
   </li>
   <li><strong>Committee Member</strong> of<br>
     <ul>
