--- a/index.html
+++ b/index.html
@@ -1097,6 +1097,16 @@
   <li>
     <div style="float:left;">
       <font color="black">
+        2025 Boston Half Marathon
+      </font>
+    </div>
+  </li>
+  
+  <br>
+
+  <li>
+    <div style="float:left;">
+      <font color="black">
         2025 The 129th Boston Marathon, Abbott World Marathon Majors
       </font>
     </div>
